Добавил дамп базы, функцию удаления сообщений

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=WhiteRabbit
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:nve+Lo84a3ru00YoT4EBk0zgq+eIlSfHYQJL8ln7hQg=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TIMEZONE=Asia/Yeakaterinburg
+APP_TIMEZONE=Asia/Yekaterinburg
 APP_LOCALE=ru
 
 LOG_CHANNEL=stack
@@ -13,7 +13,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=white_rabbit
 DB_USERNAME=root
 DB_PASSWORD=
 
